clusters/main/kubernetes/system/networkpolicies/app/etcd-backup-allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: etcd-backup
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: ${LAN_CIDR}
      ports:
        - protocol: TCP
          port: 50000
